tests/asm-link/blue-paint/rgbasm.err
error: unexpected character after line continuation
   ╭─[ <macro argument #1>:1:1 ]
   │
 1 │ \3
   │ ┬  
   │ ╰── there can only be whitespace between this backslash and the end of the line
   │
   ├─[ test.asm:7:2 ]
   │
 7 │     \1statement\2
   │     ─┬  
   │      ╰── expanded here
   │ 
 9 │ arg_to_arg \\3, \\4, \{, \}
   │ ─────┬────  
   │      ╰────── macro called here
   │ 
   │ Help: characters inside of interpolations and macro args cannot start one themselves
───╯
error: unexpected character after line continuation
   ╭─[ <macro argument #2>:1:1 ]
   │
 1 │ \4
   │ ┬  
   │ ╰── there can only be whitespace between this backslash and the end of the line
   │
   ├─[ test.asm:7:13 ]
   │
 7 │     \1statement\2
   │                ─┬  
   │                 ╰── expanded here
   │ 
 9 │ arg_to_arg \\3, \\4, \{, \}
   │ ─────┬────  
   │      ╰────── macro called here
   │ 
   │ Help: characters inside of interpolations and macro args cannot start one themselves
───╯
error: syntax error: unexpected number
   ╭─[ <macro argument #1>:1:2 ]
   │
 1 │ \3
   │  ┬  
   │  ╰── expected "identifier", "scoped identifier", "local identifier", ":", "+", "-", "adc", ...90 others
   │
   ├─[ test.asm:7:2 ]
   │
 7 │     \1statement\2
   │     ─┬  
   │      ╰── expanded here
   │ 
 9 │ arg_to_arg \\3, \\4, \{, \}
   │ ─────┬────  
   │      ╰────── macro called here
───╯
error: unexpected character '{'
    ╭─[ <macro argument #1>:1:1 ]
    │
  1 │ {
    │ ┬  
    │ ╰── this character was not expected at this point
    │
    ├─[ test.asm:13:2 ]
    │
 13 │     \1statement\2
    │     ─┬  
    │      ╰── expanded here
    │ 
 15 │ arg_to_interp \{, \}
    │ ──────┬──────  
    │       ╰──────── macro called here
    │ 
    │ Help: characters inside of macro args cannot start an expansion themselves
────╯
error: unexpected character '}'
    ╭─[ <macro argument #2>:1:1 ]
    │
  1 │ }
    │ ┬  
    │ ╰── this character was not expected at this point
    │
    ├─[ test.asm:13:13 ]
    │
 13 │     \1statement\2
    │                ─┬  
    │                 ╰── expanded here
    │ 
 15 │ arg_to_interp \{, \}
    │ ──────┬──────  
    │       ╰──────── macro called here
    │ 
    │ Help: characters inside of macro args cannot start an expansion themselves
────╯
error: unexpected character '{'
    ╭─[ open:1:1 ]
    │
  1 │ {
    │ ┬  
    │ ╰── this character was not expected at this point
    │
    ├─[ test.asm:20:1 ]
    │
 20 │ {open}statement{close}
    │ ───┬──  
    │    ╰──── interpolated here
    │ 
    │ Help: characters inside of macro args cannot start an expansion themselves
────╯
error: unexpected character '}'
    ╭─[ close:1:1 ]
    │
  1 │ }
    │ ┬  
    │ ╰── this character was not expected at this point
    │
    ├─[ test.asm:20:16 ]
    │
 20 │ {open}statement{close}
    │                ───┬───  
    │                   ╰───── interpolated here
    │ 
    │ Help: characters inside of macro args cannot start an expansion themselves
────╯
error: unexpected character after line continuation
    ╭─[ <macro argument #1>:1:1 ]
    │
  1 │ \1
    │ ┬  
    │ ╰── there can only be whitespace between this backslash and the end of the line
    │
    ├─[ test.asm:24:2 ]
    │
 24 │     \1
    │     ─┬  
    │      ╰── expanded here
    │ 
 26 │ endless \\1
    │ ───┬───  
    │    ╰───── macro called here
    │ 
    │ Help: characters inside of interpolations and macro args cannot start one themselves
────╯
error: syntax error: unexpected number
    ╭─[ <macro argument #1>:1:2 ]
    │
  1 │ \1
    │  ┬  
    │  ╰── expected "identifier", "scoped identifier", "local identifier", ":", "+", "-", "adc", ...90 others
    │
    ├─[ test.asm:24:2 ]
    │
 24 │     \1
    │     ─┬  
    │      ╰── expanded here
    │ 
 26 │ endless \\1
    │ ───┬───  
    │    ╰───── macro called here
────╯
error: unexpected character '{'
    ╭─[ infinite:1:1 ]
    │
  1 │ {infinite}
    │ ┬  
    │ ╰── this character was not expected at this point
    │
    ├─[ test.asm:30:1 ]
    │
 30 │ {infinite}
    │ ─────┬────  
    │      ╰────── interpolated here
    │ 
    │ Help: characters inside of macro args cannot start an expansion themselves
────╯
error: unexpected character '{'
    ╭─[ infinite:1:1 ]
    │
  1 │ {infinite}
    │ ┬  
    │ ╰── this character was not expected at this point
    │
    ├─[ infinite:1:2 ]
    │
  1 │ {infinite}
    │  ────┬───  
    │      ╰───── interpolated here
    │
    ├─[ test.asm:30:1 ]
    │
 30 │ {infinite}
    │ ─────┬────  
    │      ╰────── interpolated here
    │ 
    │ Help: characters inside of macro args cannot start an expansion themselves
────╯
error: unexpected character '{'
    ╭─[ infinite:1:1 ]
    │
  1 │ {infinite}
    │ ┬  
    │ ╰── this character was not expected at this point
    │
    ├─[ infinite:1:2 ]
    │
  1 │ {infinite}
    │  ────┬───  
    │      ╰───── interpolated here
    │
    ├─[ infinite:1:2 ]
    │
  1 │ {infinite}
    │  ────┬───  
    │      ╰───── interpolated here
    │
    ├─[ test.asm:30:1 ]
    │
 30 │ {infinite}
    │ ─────┬────  
    │      ╰────── interpolated here
    │ 
    │ Help: characters inside of macro args cannot start an expansion themselves
────╯
error: unexpected character '{'
    ╭─[ infinite:1:1 ]
    │
  1 │ {infinite}
    │ ┬  
    │ ╰── this character was not expected at this point
    │
    ├─[ infinite:1:2 ]
    │
  1 │ {infinite}
    │  ────┬───  
    │      ╰───── interpolated here
    │
    ├─[ infinite:1:2 ]
    │
  1 │ {infinite}
    │  ────┬───  
    │      ╰───── interpolated here
    │
    ├─[ infinite:1:2 ]
    │
  1 │ {infinite}
    │  ────┬───  
    │      ╰───── interpolated here
    │
    ├─[ test.asm:30:1 ]
    │
 30 │ {infinite}
    │ ─────┬────  
    │      ╰────── interpolated here
    │ 
    │ Help: characters inside of macro args cannot start an expansion themselves
────╯
error: maximum recursion depth exceeded
    ╭─[ infinite:1:2 ]
    │
  1 │ {infinite}
    │  ────┬───  
    │      ╰───── depth is 5 contexts here, cannot enter a new one
    │
    ├─[ infinite:1:2 ]
    │
  1 │ {infinite}
    │  ────┬───  
    │      ╰───── interpolated here
    │
    ├─[ infinite:1:2 ]
    │
  1 │ {infinite}
    │  ────┬───  
    │      ╰───── interpolated here
    │
    ├─[ infinite:1:2 ]
    │
  1 │ {infinite}
    │  ────┬───  
    │      ╰───── interpolated here
    │
    ├─[ test.asm:30:1 ]
    │
 30 │ {infinite}
    │ ─────┬────  
    │      ╰────── interpolated here
────╯
error: unexpected character '}'
    ╭─[ infinite:1:10 ]
    │
  1 │ {infinite}
    │          ┬  
    │          ╰── this character was not expected at this point
    │
    ├─[ infinite:1:2 ]
    │
  1 │ {infinite}
    │  ────┬───  
    │      ╰───── interpolated here
    │
    ├─[ infinite:1:2 ]
    │
  1 │ {infinite}
    │  ────┬───  
    │      ╰───── interpolated here
    │
    ├─[ infinite:1:2 ]
    │
  1 │ {infinite}
    │  ────┬───  
    │      ╰───── interpolated here
    │
    ├─[ test.asm:30:1 ]
    │
 30 │ {infinite}
    │ ─────┬────  
    │      ╰────── interpolated here
    │ 
    │ Help: characters inside of macro args cannot start an expansion themselves
────╯
error: unexpected character '}'
    ╭─[ infinite:1:10 ]
    │
  1 │ {infinite}
    │          ┬  
    │          ╰── this character was not expected at this point
    │
    ├─[ infinite:1:2 ]
    │
  1 │ {infinite}
    │  ────┬───  
    │      ╰───── interpolated here
    │
    ├─[ infinite:1:2 ]
    │
  1 │ {infinite}
    │  ────┬───  
    │      ╰───── interpolated here
    │
    ├─[ test.asm:30:1 ]
    │
 30 │ {infinite}
    │ ─────┬────  
    │      ╰────── interpolated here
    │ 
    │ Help: characters inside of macro args cannot start an expansion themselves
────╯
error: unexpected character '}'
    ╭─[ infinite:1:10 ]
    │
  1 │ {infinite}
    │          ┬  
    │          ╰── this character was not expected at this point
    │
    ├─[ infinite:1:2 ]
    │
  1 │ {infinite}
    │  ────┬───  
    │      ╰───── interpolated here
    │
    ├─[ test.asm:30:1 ]
    │
 30 │ {infinite}
    │ ─────┬────  
    │      ╰────── interpolated here
    │ 
    │ Help: characters inside of macro args cannot start an expansion themselves
────╯
error: unexpected character '}'
    ╭─[ infinite:1:10 ]
    │
  1 │ {infinite}
    │          ┬  
    │          ╰── this character was not expected at this point
    │
    ├─[ test.asm:30:1 ]
    │
 30 │ {infinite}
    │ ─────┬────  
    │      ╰────── interpolated here
    │ 
    │ Help: characters inside of macro args cannot start an expansion themselves
────╯
18 errors generated.
